# jni-rest

./: Readme.md
jniimpl/: CMakeLists.txt
jniimpl/include/cuj/: jni_class.h  jni_declarations.h  jni_env.h  jni_field.h  jni_master.h  jni_resource.h  jni_resource_base.h  jni_utils.h
jniimpl/license/cuj/: LICENSE.txt
jniimpl/src/: CMakeLists.txt  jnisrv_impl.cpp
jniimpl/src/include/jni/: com_glywk_jnisrv_OperationFacade.h
jnisrv/: pom.xml
jnisrv/src/main/java/com/glywk/jnisrv/: InvalidHttpStatusException.java  JniRestController.java  JnisrvApplication.java  MessageResultWrapper.java  OperationFacade.java
jnisrv/src/main/resources/: application.properties.in
jnisrv/src/test/java/com/glywk/jnisrv/: JnisrvApplicationTests.java
