cmake_minimum_required(VERSION 3.12 FATAL_ERROR)

project(jniimpl)

add_library(jnisrv_impl SHARED jnisrv_impl.cpp)
target_include_directories(jnisrv_impl PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>  # <prefix>/include
)
target_link_libraries(jnisrv_impl PRIVATE
  cuj_jni
)

file(TO_NATIVE_PATH ${JNISRV_APPLICATION_PROPERTIES} JNISRV_APPLICATION_PROPERTIES_PATH)
file(TO_NATIVE_PATH ${JNISRV_TEST_APPLICATION_PROPERTIES} JNISRV_TEST_APPLICATION_PROPERTIES_PATH)

add_custom_command( TARGET jnisrv_impl POST_BUILD
  COMMAND copy /Y ${JNISRV_APPLICATION_PROPERTIES_PATH}.in ${JNISRV_APPLICATION_PROPERTIES_PATH}
  COMMAND echo rest-dll=$<TARGET_FILE:jnisrv_impl> >> ${JNISRV_APPLICATION_PROPERTIES_PATH}
  COMMAND copy /Y ${JNISRV_TEST_APPLICATION_PROPERTIES_PATH}.in ${JNISRV_TEST_APPLICATION_PROPERTIES_PATH}
  COMMAND echo rest-dll=$<TARGET_FILE:jnisrv_impl> >> ${JNISRV_TEST_APPLICATION_PROPERTIES_PATH}
)
